--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"> </script>
 </head>
 <body>
 
 <div class="container">
-<div class="grid"></div>
-<div>Flags left: <span id="flags-left">10</span></div>
-<div id="result"></div>
-
+    <div class="grid"></div>
+    <div>Flags Left: <span id="flags-left"></span></div>
+    <div id="result"></div>
 </div>
 
+<script src="app.js"></script>
     
 </body>
 </html>
